@@ -354,7 +354,8 @@
             <proof>
                 <case direction="backward">
                     <p>Let <m>S=\set{\vectorlist{x}{n}}</m> be a linearly independent set of eigenvectors of <m>A</m> for the eigenvalues <m>\scalarlist{\lambda}{n}</m>.  Recall <xref ref="definition-SUV" acro="SUV"/> and define<md>
-                        <mrow>R&amp;=\matrixcolumns{x}{n}\\
+                        <mrow>R&amp;=\matrixcolumns{x}{n}
+                        &amp;
                         D&amp;=
                         \begin{bmatrix}
                         \lambda_1 &amp; 0 &amp; 0 &amp;\cdots &amp; 0\\
@@ -365,29 +366,29 @@
                         \end{bmatrix}
                         =[\lambda_1\vect{e}_1|\lambda_2\vect{e}_2|\lambda_3\vect{e}_3|\ldots|\lambda_n\vect{e}_n]</mrow>
                     </md>.</p>
-                    <p>The columns of <m>R</m> are the vectors of the linearly independent set <m>S</m> and so by <xref ref="theorem-NMLIC" acro="NMLIC"/> the matrix <m>R</m> is nonsingular.  By <xref ref="theorem-NI" acro="NI"/> we know <m>\inverse{R}</m> exists.  We have<md>
-                        <mrow>\inverse{R}AR&amp;=
-                        \inverse{R}A\matrixcolumns{x}{n}</mrow>
-                        <mrow>&amp;=\inverse{R}[A\vect{x}_1|A\vect{x}_2|A\vect{x}_3|\ldots|A\vect{x}_n]&amp;&amp;
+                    <p>The columns of <m>R</m> are the vectors of the linearly independent set <m>S</m> and so by <xref ref="theorem-NMLIC" acro="NMLIC"/> the matrix <m>R</m> is nonsingular.  We have<md>
+                        <mrow>AR
+                              &amp;=A\matrixcolumns{x}{n}</mrow>
+                        <mrow>&amp;=[A\vect{x}_1|A\vect{x}_2|A\vect{x}_3|\ldots|A\vect{x}_n]&amp;&amp;
                             <xref ref="definition-MM" acro="MM"/></mrow>
-                        <mrow>&amp;=\inverse{R}[\lambda_1\vect{x}_1|\lambda_2\vect{x}_2|\lambda_3\vect{x}_3|\ldots|\lambda_n\vect{x}_n]&amp;&amp;
+                        <mrow>&amp;=[\lambda_1\vect{x}_1|\lambda_2\vect{x}_2|\lambda_3\vect{x}_3|\ldots|\lambda_n\vect{x}_n]&amp;&amp;
                             <xref ref="definition-EEM" acro="EEM"/></mrow>
-                        <mrow>&amp;=\inverse{R}[\lambda_1R\vect{e}_1|\lambda_2R\vect{e}_2|\lambda_3R\vect{e}_3|\ldots|\lambda_nR\vect{e}_n]&amp;&amp;
+                        <mrow>&amp;=[\lambda_1R\vect{e}_1|\lambda_2R\vect{e}_2|\lambda_3R\vect{e}_3|\ldots|\lambda_nR\vect{e}_n]&amp;&amp;
                             <xref ref="definition-MVP" acro="MVP"/></mrow>
-                        <mrow>&amp;=\inverse{R}[R(\lambda_1\vect{e}_1)|R(\lambda_2\vect{e}_2)|R(\lambda_3\vect{e}_3)|\ldots|R(\lambda_n\vect{e}_n)]&amp;&amp;
+                        <mrow>&amp;=[R(\lambda_1\vect{e}_1)|R(\lambda_2\vect{e}_2)|R(\lambda_3\vect{e}_3)|\ldots|R(\lambda_n\vect{e}_n)]&amp;&amp;
                             <xref ref="theorem-MMSMM" acro="MMSMM"/></mrow>
-                        <mrow>&amp;=\inverse{R}R[\lambda_1\vect{e}_1|\lambda_2\vect{e}_2|\lambda_3\vect{e}_3|\ldots|\lambda_n\vect{e}_n]&amp;&amp;
+                        <mrow>&amp;=R[\lambda_1\vect{e}_1|\lambda_2\vect{e}_2|\lambda_3\vect{e}_3|\ldots|\lambda_n\vect{e}_n]&amp;&amp;
                             <xref ref="definition-MM" acro="MM"/></mrow>
-                        <mrow>&amp;=I_nD&amp;&amp;
-                            <xref ref="definition-MI" acro="MI"/></mrow>
-                        <mrow>&amp;=D&amp;&amp;
-                            <xref ref="theorem-MMIM" acro="MMIM"/></mrow>
+                        <mrow>&amp;=RD</mrow>
                     </md>.</p>
                     <p>This says that <m>A</m> is similar to the diagonal matrix <m>D</m> via the nonsingular matrix <m>R</m>.  Thus <m>A</m> is diagonalizable (<xref ref="definition-DZM" acro="DZM"/>).</p>
                 </case>
                 <case direction="forward">
-                    <p>Suppose that <m>A</m> is diagonalizable, so there is a nonsingular matrix of size <m>n</m><md>
-                        <mrow>T&amp;=\matrixcolumns{y}{n}</mrow><intertext>and a diagonal matrix (recall <xref ref="definition-SUV" acro="SUV"/>)</intertext><mrow>E&amp;=\begin{bmatrix}
+                    <p>Suppose that <m>A</m> is diagonalizable, so there is a nonsingular matrix <m>T</m> of size <m>n</m> and a diagonal matrix <m>E</m> (recall <xref ref="definition-SUV" acro="SUV"/>)
+                    <md>
+                        <mrow>T&amp;=\matrixcolumns{y}{n}
+                        &amp;
+                        E&amp;=\begin{bmatrix}
                         d_1 &amp; 0 &amp; 0 &amp;\cdots &amp; 0\\
                         0 &amp;d_2 &amp; 0 &amp;\cdots &amp; 0\\
                         0 &amp; 0 &amp;d_3 &amp;\cdots &amp; 0\\
@@ -395,22 +396,18 @@
                         0 &amp; 0 &amp; 0 &amp;\cdots &amp; d_n
                         \end{bmatrix}
                         =[d_1\vect{e}_1|d_2\vect{e}_2|d_3\vect{e}_3|\ldots|d_n\vect{e}_n]&amp;&amp;\text{}</mrow>
-                    </md>such that <m>\inverse{T}AT=E</m>.</p>
+                    </md>such that <m>AT=TE</m>.</p>
                     <p>Then consider,<md>
                         <mrow>[A\vect{y}_1|A\vect{y}_2|A\vect{y}_3&amp;|\ldots|A\vect{y}_n]</mrow>
                         <mrow>&amp;=A\matrixcolumns{y}{n}&amp;&amp;
                             <xref ref="definition-MM" acro="MM"/></mrow>
                         <mrow>&amp;=AT</mrow>
-                        <mrow>&amp;=I_nAT&amp;&amp;
-                            <xref ref="theorem-MMIM" acro="MMIM"/></mrow>
-                        <mrow>&amp;=T\inverse{T}AT&amp;&amp;
-                            <xref ref="definition-MI" acro="MI"/></mrow>
-                        <mrow>&amp;=TE</mrow>
+                        <mrow>&amp;=TE&amp;&amp;<xref ref="definition-SIM"/></mrow>
                         <mrow>&amp;=T[d_1\vect{e}_1|d_2\vect{e}_2|d_3\vect{e}_3|\ldots|d_n\vect{e}_n]</mrow>
                         <mrow>&amp;=[T(d_1\vect{e}_1)|T(d_2\vect{e}_2)|T(d_3\vect{e}_3)|\ldots|T(d_n\vect{e}_n)]&amp;&amp;
                             <xref ref="definition-MM" acro="MM"/></mrow>
                         <mrow>&amp;=[d_1T\vect{e}_1|d_2T\vect{e}_2|d_3T\vect{e}_3|\ldots|d_nT\vect{e}_n]&amp;&amp;
-                            <xref ref="definition-MM" acro="MM"/></mrow>
+                            <xref ref="theorem-MMSMM" acro="MMSMM"/></mrow>
                         <mrow>&amp;=[d_1\vect{y}_1|d_2\vect{y}_2|d_3\vect{y}_3|\ldots|d_n\vect{y}_n]&amp;&amp;
                             <xref ref="definition-MVP" acro="MVP"/></mrow>
                     </md>.</p>
