@@ -60,6 +60,7 @@ Edit: Expand Solution IVLT.T40
 Edit: Improve Definition SIM, Similar Matrices
 Edit: Theorem SMEE, expand conclusion, edit proof
 Edit: Theorem DED, simplify the proof
+Edit: Theorem DC, minor changes to streamline proof
 Change: Streamline second half of the proof of Theorem BS
 Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
 Change: Theorems SSNS, BNS need case when n = r (Ken Price)
